--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "dequal": "^2.0.2",
     "lodash": "^4.17.20",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "warning": "^4.0.3"
   },
   "devDependencies": {
     "@types/react": "^17.0.0",
